Add super sankey

--- a/src/Web/Sankey.Web/Views/Shared/_Layout.cshtml
+++ b/src/Web/Sankey.Web/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Simple</a></li>
+                    <li><a asp-area="" asp-controller="Simple" asp-action="Index">Simple</a></li>
                     <li><a asp-area="" asp-controller="Super" asp-action="Index">Super</a></li>
                     <li><a asp-area="" asp-controller="Help" asp-action="Index">About</a></li>
                     <li><a asp-area="" asp-controller="Contact" asp-action="Index">Contact</a></li>
