--- a/src/Web/Sankey.Web/Views/Super/Index.cshtml
+++ b/src/Web/Sankey.Web/Views/Super/Index.cshtml
@@ -1,106 +1,98 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = $"Super Sankey for {ViewBag.Geography} in {ViewBag.Year}";
 }
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how to build ASP.NET apps that can run anywhere.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner3.svg" alt="Package Management" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Bring in libraries from NuGet and npm, and automate tasks using Grunt or Gulp.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525029&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner4.svg" alt="Microsoft Azure" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
+<div class="row">
+    <div class="col-md-8">
+        <h1>Super Sankey for <span id="sankey_geography">Geography</span> in <span id="sankey_year">Year</span> in petajoules</h1>
+        <div id="sankey_basic" style="width: 900px; height: 600px;"></div>
+        <p><span id="sankey_note">Note</span></p>
     </div>
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
+    <div class="col-md-2">
+        <h2>Year</h2>
+        <ul>
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="1995">1995</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="1996">1996</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="1997">1997</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="1998">1998</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="1999">1999</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2000">2000</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2001">2001</a></li>            
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2002">2002</a></li>            
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2003">2003</a></li>            
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2004">2004</a></li>            
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2005">2005</a></li>            
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2006">2006</a></li>            
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2007">2007</a></li>            
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2008">2008</a></li>            
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2009">2009</a></li>            
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2010">2010</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2011">2011</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2012">2012</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2013">2013</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2014">2014</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2015">2015</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2016">2016</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2017">2017</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2018">2018</a></li>
+        </ul>
+    </div>
+    <div class="col-md-2">
+        <h2>Geography</h2>
+        <ul>
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="ca"    asp-route-year="@ViewBag.Year">Canada</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="ca-ab" asp-route-year="@ViewBag.Year">Alberta</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="ca-bc" asp-route-year="@ViewBag.Year">British Columbia</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="ca-mb" asp-route-year="@ViewBag.Year">Manitoba</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="ca-nb" asp-route-year="@ViewBag.Year">New Brunswick</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="ca-nl" asp-route-year="@ViewBag.Year">Newfoundland and Labrador</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="ca-ns" asp-route-year="@ViewBag.Year">Nova Scotia</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="ca-on" asp-route-year="@ViewBag.Year">Ontario</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="ca-pe" asp-route-year="@ViewBag.Year">Prince Edward Island</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="ca-qc" asp-route-year="@ViewBag.Year">Quebec</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="ca-sk" asp-route-year="@ViewBag.Year">Saskatchewan</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="ca-nt" asp-route-year="@ViewBag.Year">Northwest Territories</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="ca-nu" asp-route-year="@ViewBag.Year">Nunavut</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="ca-yt" asp-route-year="@ViewBag.Year">Yukon Territory</a></li>
+        </ul>
+    </div>
 </div>
 
-<div class="row">
-    <div class="col-md-3">
-        <h2>Application uses</h2>
-        <ul>
-            <li>Sample pages using ASP.NET Core MVC</li>
-            <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>How to</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398600">Add a Controller and View</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Overview</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Run &amp; Deploy</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
-        </ul>
-    </div>
-</div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+<script type="text/javascript">
+    google.charts.load('current', { 'packages': ['sankey'] });
+    google.charts.setOnLoadCallback(drawChart);
+    
+    var uri = 'http://localhost:8080/api/flows/en/super-sankey/@ViewBag.Geography/@ViewBag.Year';
+
+    function drawChart() {
+        // Sets chart options.
+        var options = {
+            width: 600,
+        };
+
+        // Instantiates and draws our chart, passing in some options.
+        var chart = new google.visualization.Sankey(document.getElementById('sankey_basic'));
+
+        $.getJSON(uri, function (response) {
+
+            console.info(response);
+            $('#sankey_geography').text(response.geography);
+            $('#sankey_year').text(response.year);
+            $('#sankey_note').text(response.note);
+
+            var data = new google.visualization.DataTable();
+
+            data.addColumn('string', 'Source');
+            data.addColumn('string', 'Target');
+            data.addColumn('number', 'Quantity');
+            data.addRows(response.data);
+
+            chart.draw(data, options);
+        });
+    }
+</script>
