Fix nginx api Fix run Add grignon in image name to push to docker hub Update super sankey data

--- a/src/Web/Sankey.Web/Views/Simple/Index.cshtml
+++ b/src/Web/Sankey.Web/Views/Simple/Index.cshtml
@@ -67,7 +67,7 @@
     google.charts.load('current', { 'packages': ['sankey'] });
     google.charts.setOnLoadCallback(drawChart);
     
-    var uri = 'http://localhost:8080/api/flows/en/simple-sankey/@ViewBag.Geography/@ViewBag.Year';
+    var uri = '/api/flows/en/simple-sankey/@ViewBag.Geography/@ViewBag.Year';
 
     function drawChart() {
         // Sets chart options.
