--- a/src/Web/Sankey.Web/Views/Super/Index.cshtml
+++ b/src/Web/Sankey.Web/Views/Super/Index.cshtml
@@ -11,49 +11,49 @@
     <div class="col-md-2">
         <h2>Year</h2>
         <ul>
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="1995">1995</a></li>
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="1996">1996</a></li>
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="1997">1997</a></li>
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="1998">1998</a></li>
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="1999">1999</a></li>
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2000">2000</a></li>
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2001">2001</a></li>            
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2002">2002</a></li>            
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2003">2003</a></li>            
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2004">2004</a></li>            
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2005">2005</a></li>            
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2006">2006</a></li>            
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2007">2007</a></li>            
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2008">2008</a></li>            
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2009">2009</a></li>            
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2010">2010</a></li>
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2011">2011</a></li>
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2012">2012</a></li>
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2013">2013</a></li>
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2014">2014</a></li>
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2015">2015</a></li>
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2016">2016</a></li>
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2017">2017</a></li>
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2018">2018</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="@ViewBag.Geography" asp-route-year="1995">1995</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="@ViewBag.Geography" asp-route-year="1996">1996</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="@ViewBag.Geography" asp-route-year="1997">1997</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="@ViewBag.Geography" asp-route-year="1998">1998</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="@ViewBag.Geography" asp-route-year="1999">1999</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="@ViewBag.Geography" asp-route-year="2000">2000</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="@ViewBag.Geography" asp-route-year="2001">2001</a></li>            
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="@ViewBag.Geography" asp-route-year="2002">2002</a></li>            
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="@ViewBag.Geography" asp-route-year="2003">2003</a></li>            
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="@ViewBag.Geography" asp-route-year="2004">2004</a></li>            
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="@ViewBag.Geography" asp-route-year="2005">2005</a></li>            
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="@ViewBag.Geography" asp-route-year="2006">2006</a></li>            
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="@ViewBag.Geography" asp-route-year="2007">2007</a></li>            
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="@ViewBag.Geography" asp-route-year="2008">2008</a></li>            
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="@ViewBag.Geography" asp-route-year="2009">2009</a></li>            
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="@ViewBag.Geography" asp-route-year="2010">2010</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="@ViewBag.Geography" asp-route-year="2011">2011</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="@ViewBag.Geography" asp-route-year="2012">2012</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="@ViewBag.Geography" asp-route-year="2013">2013</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="@ViewBag.Geography" asp-route-year="2014">2014</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="@ViewBag.Geography" asp-route-year="2015">2015</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="@ViewBag.Geography" asp-route-year="2016">2016</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="@ViewBag.Geography" asp-route-year="2017">2017</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="@ViewBag.Geography" asp-route-year="2018">2018</a></li>
         </ul>
     </div>
     <div class="col-md-2">
         <h2>Geography</h2>
         <ul>
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="ca"    asp-route-year="@ViewBag.Year">Canada</a></li>
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="ca-ab" asp-route-year="@ViewBag.Year">Alberta</a></li>
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="ca-bc" asp-route-year="@ViewBag.Year">British Columbia</a></li>
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="ca-mb" asp-route-year="@ViewBag.Year">Manitoba</a></li>
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="ca-nb" asp-route-year="@ViewBag.Year">New Brunswick</a></li>
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="ca-nl" asp-route-year="@ViewBag.Year">Newfoundland and Labrador</a></li>
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="ca-ns" asp-route-year="@ViewBag.Year">Nova Scotia</a></li>
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="ca-on" asp-route-year="@ViewBag.Year">Ontario</a></li>
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="ca-pe" asp-route-year="@ViewBag.Year">Prince Edward Island</a></li>
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="ca-qc" asp-route-year="@ViewBag.Year">Quebec</a></li>
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="ca-sk" asp-route-year="@ViewBag.Year">Saskatchewan</a></li>
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="ca-nt" asp-route-year="@ViewBag.Year">Northwest Territories</a></li>
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="ca-nu" asp-route-year="@ViewBag.Year">Nunavut</a></li>
-            <li><a asp-area="" asp-controller="Super" asp-action="Index" asp-route-geography="ca-yt" asp-route-year="@ViewBag.Year">Yukon Territory</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="ca"    asp-route-year="@ViewBag.Year">Canada</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="ca-ab" asp-route-year="@ViewBag.Year">Alberta</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="ca-bc" asp-route-year="@ViewBag.Year">British Columbia</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="ca-mb" asp-route-year="@ViewBag.Year">Manitoba</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="ca-nb" asp-route-year="@ViewBag.Year">New Brunswick</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="ca-nl" asp-route-year="@ViewBag.Year">Newfoundland and Labrador</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="ca-ns" asp-route-year="@ViewBag.Year">Nova Scotia</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="ca-on" asp-route-year="@ViewBag.Year">Ontario</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="ca-pe" asp-route-year="@ViewBag.Year">Prince Edward Island</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="ca-qc" asp-route-year="@ViewBag.Year">Quebec</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="ca-sk" asp-route-year="@ViewBag.Year">Saskatchewan</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="ca-nt" asp-route-year="@ViewBag.Year">Northwest Territories</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="ca-nu" asp-route-year="@ViewBag.Year">Nunavut</a></li>
+            <li><a asp-area="" asp-controller="Super" asp-route-geography="ca-yt" asp-route-year="@ViewBag.Year">Yukon Territory</a></li>
         </ul>
     </div>
 </div>
@@ -67,7 +67,7 @@
     google.charts.load('current', { 'packages': ['sankey'] });
     google.charts.setOnLoadCallback(drawChart);
     
-    var uri = 'http://localhost:8080/api/flows/en/super-sankey/@ViewBag.Geography/@ViewBag.Year';
+    var uri = '/api/flows/en/super-sankey/@ViewBag.Geography/@ViewBag.Year';
 
     function drawChart() {
         // Sets chart options.
