--- a/src/Web/Sankey.Web/Views/Simple/D3.cshtml
+++ b/src/Web/Sankey.Web/Views/Simple/D3.cshtml
@@ -5,55 +5,55 @@
 <div class="row">
     <div class="col-md-8">
         <h1>Simple Sankey for <span id="sankey_geography">Geography</span> in <span id="sankey_year">Year</span> in petajoules</h1>
-        <div id="sankey_basic" style="width: 900px; height: 600px;"></div>
+        <p id="chart">Loading chart</p>
         <p><span id="sankey_note">Note</span></p>
     </div>
     <div class="col-md-2">
         <h2>Year</h2>
         <ul>
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="1996">1996</a></li>
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="1997">1997</a></li>
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="1998">1998</a></li>
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="1999">1999</a></li>
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2000">2000</a></li>
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2001">2001</a></li>            
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2002">2002</a></li>            
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2003">2003</a></li>            
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2004">2004</a></li>            
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2005">2005</a></li>            
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2006">2006</a></li>            
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2007">2007</a></li>            
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2008">2008</a></li>            
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2009">2009</a></li>            
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2010">2010</a></li>
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2011">2011</a></li>
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2012">2012</a></li>
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2013">2013</a></li>
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2014">2014</a></li>
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2015">2015</a></li>
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2016">2016</a></li>
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2017">2017</a></li>
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="@ViewBag.Geography" asp-route-year="2018">2018</a></li>
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="@ViewBag.Geography" asp-route-year="1996">1996</a></li>
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="@ViewBag.Geography" asp-route-year="1997">1997</a></li>
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="@ViewBag.Geography" asp-route-year="1998">1998</a></li>
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="@ViewBag.Geography" asp-route-year="1999">1999</a></li>
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="@ViewBag.Geography" asp-route-year="2000">2000</a></li>
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="@ViewBag.Geography" asp-route-year="2001">2001</a></li>            
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="@ViewBag.Geography" asp-route-year="2002">2002</a></li>            
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="@ViewBag.Geography" asp-route-year="2003">2003</a></li>            
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="@ViewBag.Geography" asp-route-year="2004">2004</a></li>            
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="@ViewBag.Geography" asp-route-year="2005">2005</a></li>            
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="@ViewBag.Geography" asp-route-year="2006">2006</a></li>            
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="@ViewBag.Geography" asp-route-year="2007">2007</a></li>            
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="@ViewBag.Geography" asp-route-year="2008">2008</a></li>            
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="@ViewBag.Geography" asp-route-year="2009">2009</a></li>            
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="@ViewBag.Geography" asp-route-year="2010">2010</a></li>
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="@ViewBag.Geography" asp-route-year="2011">2011</a></li>
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="@ViewBag.Geography" asp-route-year="2012">2012</a></li>
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="@ViewBag.Geography" asp-route-year="2013">2013</a></li>
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="@ViewBag.Geography" asp-route-year="2014">2014</a></li>
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="@ViewBag.Geography" asp-route-year="2015">2015</a></li>
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="@ViewBag.Geography" asp-route-year="2016">2016</a></li>
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="@ViewBag.Geography" asp-route-year="2017">2017</a></li>
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="@ViewBag.Geography" asp-route-year="2018">2018</a></li>
         </ul>
     </div>
     <div class="col-md-2">
         <h2>Geography</h2>
         <ul>
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="ca"    asp-route-year="@ViewBag.Year">Canada</a></li>
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="ca-qc" asp-route-year="@ViewBag.Year">Québec</a></li>
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="ca-ab" asp-route-year="@ViewBag.Year">Alberta</a></li>
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="ca-bc" asp-route-year="@ViewBag.Year">British Columbia</a></li>
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="ca-mb" asp-route-year="@ViewBag.Year">Manitoba</a></li>
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="ca-nb" asp-route-year="@ViewBag.Year">New Brunswick</a></li>
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="ca-nl" asp-route-year="@ViewBag.Year">Newfoundland and Labrador</a></li>
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="ca-ns" asp-route-year="@ViewBag.Year">Nova Scotia</a></li>
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="ca-on" asp-route-year="@ViewBag.Year">Ontario</a></li>
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="ca-pe" asp-route-year="@ViewBag.Year">Prince Edward Island</a></li>
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="ca-qc" asp-route-year="@ViewBag.Year">Quebec</a></li>
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="ca-sk" asp-route-year="@ViewBag.Year">Saskatchewan</a></li>
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="ca-nt" asp-route-year="@ViewBag.Year">Northwest Territories</a></li>
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="ca-nu" asp-route-year="@ViewBag.Year">Nunavut</a></li>
-            <li><a asp-area="" asp-controller="Simple" asp-action="Index" asp-route-geography="ca-yt" asp-route-year="@ViewBag.Year">Yukon Territory</a></li>
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="ca"    asp-route-year="@ViewBag.Year">Canada</a></li>
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="ca-qc" asp-route-year="@ViewBag.Year">Québec</a></li>
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="ca-ab" asp-route-year="@ViewBag.Year">Alberta</a></li>
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="ca-bc" asp-route-year="@ViewBag.Year">British Columbia</a></li>
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="ca-mb" asp-route-year="@ViewBag.Year">Manitoba</a></li>
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="ca-nb" asp-route-year="@ViewBag.Year">New Brunswick</a></li>
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="ca-nl" asp-route-year="@ViewBag.Year">Newfoundland and Labrador</a></li>
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="ca-ns" asp-route-year="@ViewBag.Year">Nova Scotia</a></li>
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="ca-on" asp-route-year="@ViewBag.Year">Ontario</a></li>
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="ca-pe" asp-route-year="@ViewBag.Year">Prince Edward Island</a></li>
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="ca-qc" asp-route-year="@ViewBag.Year">Quebec</a></li>
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="ca-sk" asp-route-year="@ViewBag.Year">Saskatchewan</a></li>
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="ca-nt" asp-route-year="@ViewBag.Year">Northwest Territories</a></li>
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="ca-nu" asp-route-year="@ViewBag.Year">Nunavut</a></li>
+            <li><a asp-area="" asp-controller="Simple" asp-action="D3" asp-route-geography="ca-yt" asp-route-year="@ViewBag.Year">Yukon Territory</a></li>
         </ul>
     </div>
 </div>
@@ -62,75 +62,16 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
-<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-<script type="text/javascript">
-    google.charts.load('current', { 'packages': ['sankey'] });
-    google.charts.setOnLoadCallback(drawChart);
-    
-    var uri = 'http://localhost:8080/api/flows/en/simple-sankey/@ViewBag.Geography/@ViewBag.Year';
-
-    function drawChart() {
-        // Sets chart options.
-        var options = {
-            width: 600,
-        };
-
-        // Instantiates and draws our chart, passing in some options.
-        var chart = new google.visualization.Sankey(document.getElementById('sankey_basic'));
-
-        $.getJSON(uri, function (response) {
-
-            console.info(response);
-            $('#sankey_geography').text(response.geography);
-            $('#sankey_year').text(response.year);
-            $('#sankey_note').text(response.note);
-
-            var data = new google.visualization.DataTable();
-
-            data.addColumn('string', 'Source');
-            data.addColumn('string', 'Target');
-            data.addColumn('number', 'Quantity');
-            data.addRows(response.data);
-
-            chart.draw(data, options);
-        });
-    }
-</script>
-
-<script src="https://d3js.org/d3.v4.min.js"></script>
-<script src="https://unpkg.com/d3-sankey@0.6"></script>
+<script src="https://unpkg.com/d3-array@1"></script>
+<script src="https://unpkg.com/d3-collection@1"></script>
+<script src="https://unpkg.com/d3-path@1"></script>
+<script src="https://unpkg.com/d3-shape@1"></script>
+<script src="https://unpkg.com/d3-sankey@0"></script>
 <script>
 
-var svg = d3.select("svg"),
-    width = +svg.attr("width"),
-    height = +svg.attr("height");
+var uri = 'http://localhost/api/d3/en/simple-sankey/@ViewBag.Geography/@ViewBag.Year';
 
-var formatNumber = d3.format(",.0f"),
-    format = function(d) { return formatNumber(d) + " TWh"; },
-    color = d3.scaleOrdinal(d3.schemeCategory10);
-
-var sankey = d3.sankey()
-    .nodeWidth(15)
-    .nodePadding(10)
-    .extent([[1, 1], [width - 1, height - 6]]);
-
-var link = svg.append("g")
-    .attr("class", "links")
-    .attr("fill", "none")
-    .attr("stroke", "#000")
-    .attr("stroke-opacity", 0.2)
-  .selectAll("path");
-
-var node = svg.append("g")
-    .attr("class", "nodes")
-    .attr("font-family", "sans-serif")
-    .attr("font-size", 10)
-  .selectAll("g");
-
-
-   
-var uri = 'http://localhost:8080/api/flows/en/simple-sankey/@ViewBag.Geography/@ViewBag.Year';
-
+console.info(uri);
 
 $.getJSON(uri, function (response) {
 
@@ -139,43 +80,104 @@ $.getJSON(uri, function (response) {
   $('#sankey_geography').text(response.geography);
   $('#sankey_year').text(response.year);
   $('#sankey_note').text(response.note);
+
+    var units = "Widgets";
+
+    var margin = {top: 10, right: 10, bottom: 10, left: 10},
+        width = 700 - margin.left – margin.right,
+        height = 300 - margin.top – margin.bottom;
+
+    var formatNumber = d3.format(",.0f"),    // zero decimal places
+        format = function(d) { return formatNumber(d) + " " + units; },
+        color = d3.scale.category20();
+
+    // append the svg canvas to the page
+    var svg = d3.select("#chart").append("svg")
+        .attr("width", width + margin.left + margin.right)
+        .attr("height", height + margin.top + margin.bottom)
+    .append("g")
+        .attr("transform", 
+            "translate(" + margin.left + "," + margin.top + ")");
+
+    // Set the sankey diagram properties
+    var sankey = d3.sankey()
+        .nodeWidth(36)
+        .nodePadding(40)
+        .size([width, height]);
+
+    var path = sankey.link();
       
-  sankey(response.data);
+    // load the data
+    d3.json(response.data, function(error, graph) {
 
-  link = link
-    .data(energy.links)
-    .enter().append("path")
-      .attr("d", d3.sankeyLinkHorizontal())
-      .attr("stroke-width", function(d) { return Math.max(1, d.width); });
+    sankey
+        .nodes(graph.nodes)
+        .links(graph.links)
+        .layout(32);
 
-  link.append("title")
-      .text(function(d) { return d.source.name + " → " + d.target.name + "\n" + format(d.value); });
+    // add in the links
+    var link = svg.append("g").selectAll(".link")
+        .data(graph.links)
+        .enter().append("path")
+        .attr("class", "link")
+        .attr("d", path)
+        .style("stroke-width", function(d) { return Math.max(1, d.dy); })
+        .sort(function(a, b) { return b.dy - a.dy; });
 
-  node = node
-    .data(energy.nodes)
-    .enter().append("g");
+    // add the link titles
+    link.append("title")
+            .text(function(d) {
+                return d.source.name + " → " + 
+                    d.target.name + "\n" + format(d.value); });
 
-  node.append("rect")
-      .attr("x", function(d) { return d.x0; })
-      .attr("y", function(d) { return d.y0; })
-      .attr("height", function(d) { return d.y1 - d.y0; })
-      .attr("width", function(d) { return d.x1 - d.x0; })
-      .attr("fill", function(d) { return color(d.name.replace(/ .*/, "")); })
-      .attr("stroke", "#000");
+    // add in the nodes
+    var node = svg.append("g").selectAll(".node")
+        .data(graph.nodes)
+        .enter().append("g")
+        .attr("class", "node")
+        .attr("transform", function(d) { 
+            return "translate(" + d.x + "," + d.y + ")"; })
+        .call(d3.behavior.drag()
+        .origin(function(d) { return d; })
+        .on("dragstart", function() { 
+            this.parentNode.appendChild(this); })
+        .on("drag", dragmove));
 
-  node.append("text")
-      .attr("x", function(d) { return d.x0 - 6; })
-      .attr("y", function(d) { return (d.y1 + d.y0) / 2; })
-      .attr("dy", "0.35em")
-      .attr("text-anchor", "end")
-      .text(function(d) { return d.name; })
-    .filter(function(d) { return d.x0 < width / 2; })
-      .attr("x", function(d) { return d.x1 + 6; })
-      .attr("text-anchor", "start");
+    // add the rectangles for the nodes
+    node.append("rect")
+        .attr("height", function(d) { return d.dy; })
+        .attr("width", sankey.nodeWidth())
+        .style("fill", function(d) { 
+            return d.color = color(d.name.replace(/ .*/, "")); })
+        .style("stroke", function(d) { 
+            return d3.rgb(d.color).darker(2); })
+        .append("title")
+        .text(function(d) { 
+            return d.name + "\n" + format(d.value); });
 
-  node.append("title")
-      .text(function(d) { return d.name + "\n" + format(d.value); });
+    // add in the title for the nodes
+    node.append("text")
+        .attr("x", -6)
+        .attr("y", function(d) { return d.dy / 2; })
+        .attr("dy", ".35em")
+        .attr("text-anchor", "end")
+        .attr("transform", null)
+        .text(function(d) { return d.name; })
+        .filter(function(d) { return d.x < width / 2; })
+        .attr("x", 6 + sankey.nodeWidth())
+        .attr("text-anchor", "start");
+
+    // the function for moving the nodes
+    function dragmove(d) {
+        d3.select(this).attr("transform", 
+            "translate(" + (
+                d.x = Math.max(0, Math.min(width - d.dx, d3.event.x))
+            )
+            + "," + (
+                d.y = Math.max(0, Math.min(height - d.dy, d3.event.y))
+            ) + ")");
+        sankey.relayout();
+        link.attr("d", path);
+    }
 });
-
 </script>
-
